--- a/OpenGL-ActionGame.vcxproj.filters
+++ b/OpenGL-ActionGame.vcxproj.filters
@@ -23,9 +23,7 @@
     <ClInclude Include="src\Texture.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\FontRenderer.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Font.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -52,7 +50,7 @@
     <ClCompile Include="src\Texture.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\FontRenderer.cpp">
+    <ClCompile Include="src\Font.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
