--- a/OpenGL-ActionGame.vcxproj.filters
+++ b/OpenGL-ActionGame.vcxproj.filters
@@ -23,14 +23,22 @@
     <ClInclude Include="src\Texture.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\Font.h" />
+    <ClInclude Include="src\Font.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="res\shader\Default.vert">
+    <None Include="res\shader\Default.frag">
       <Filter>リソース ファイル</Filter>
     </None>
-    <None Include="res\shader\Default.frag">
+    <None Include="res\shader\FontRenderer.frag">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="res\shader\FontRenderer.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="res\shader\Default.vert">
       <Filter>リソース ファイル</Filter>
     </None>
   </ItemGroup>
