--- a/OpenGL-ActionGame.vcxproj.filters
+++ b/OpenGL-ActionGame.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="src\Font.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="src\OffscreenBuffer.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -39,6 +42,12 @@
       <Filter>リソース ファイル</Filter>
     </None>
     <None Include="res\shader\Default.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="res\shader\FinalRender.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="res\shader\FinalRender.frag">
       <Filter>リソース ファイル</Filter>
     </None>
   </ItemGroup>
@@ -59,6 +68,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\Font.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\OffscreenBuffer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
