--- a/OpenGL-ActionGame.vcxproj
+++ b/OpenGL-ActionGame.vcxproj
@@ -96,7 +96,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;glew.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Ignis\source\repos\OpenGL-ActionGame\packages\glfw.3.3.0.1\build;C:\Users\ignis\source\repos\OpenGL-ActionGame\packages\glew.1.9.0.1\build\native\lib\v110\Win32\Debug\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)packages\glew.1.9.0.1\build\native\lib\v110\Win32\Debug\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -113,7 +113,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;glew.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Ignisrt7\source\repos\OpenGL-ActionGame\packages\glfw.3.3.0.1\build;C:\Users\Ignisrt7\source\repos\OpenGL-ActionGame\packages\glew.1.9.0.1\build\native\lib\v110\Win32\Debug\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)packages\glew.1.9.0.1\build\native\lib\v110\x64\Debug\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -161,10 +161,13 @@
   <ItemGroup>
     <ClInclude Include="RenderingPart.h" />
     <ClInclude Include="src\BufferObject.h" />
+    <ClInclude Include="src\CameraController.h" />
     <ClInclude Include="src\CommonItem.h" />
     <ClInclude Include="src\DebugLogger.h" />
+    <ClInclude Include="src\EnumOperator.h" />
     <ClInclude Include="src\Font.h" />
     <ClInclude Include="src\GameEngine.h" />
+    <ClInclude Include="src\GamePad.h" />
     <ClInclude Include="src\GLSystem.h" />
     <ClInclude Include="src\OffscreenBuffer.h" />
     <ClInclude Include="src\RenderingPart.h" />
@@ -184,9 +187,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BufferObject.cpp" />
+    <ClCompile Include="src\CameraController.cpp" />
     <ClCompile Include="src\DebugLogger.cpp" />
     <ClCompile Include="src\Font.cpp" />
     <ClCompile Include="src\GameEngine.cpp" />
+    <ClCompile Include="src\GamePad.cpp" />
     <ClCompile Include="src\GLSystem.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\OffscreenBuffer.cpp" />
