--- a/OpenGL-ActionGame.vcxproj
+++ b/OpenGL-ActionGame.vcxproj
@@ -187,6 +187,8 @@
     <None Include="res\shader\FinalRender.vert" />
     <None Include="res\shader\FontRenderer.frag" />
     <None Include="res\shader\FontRenderer.vert" />
+    <None Include="res\shader\StaticMesh.frag" />
+    <None Include="res\shader\StaticMesh.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BufferObject.cpp" />
@@ -196,6 +198,7 @@
     <ClCompile Include="src\GameEngine.cpp" />
     <ClCompile Include="src\GamePad.cpp" />
     <ClCompile Include="src\GLSystem.cpp" />
+    <ClCompile Include="src\json11\json11.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\OffscreenBuffer.cpp" />
