--- a/OpenGL-ActionGame.vcxproj.filters
+++ b/OpenGL-ActionGame.vcxproj.filters
@@ -92,6 +92,12 @@
     <None Include="PosSample.frag">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="res\shader\StaticMesh.frag">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="res\shader\StaticMesh.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -131,6 +137,9 @@
       <Filter>ソース ファイル\Input</Filter>
     </ClCompile>
     <ClCompile Include="src\Mesh.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\json11\json11.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
